--- a/common.css
+++ b/common.css
@@ -19,6 +19,10 @@ body{
     padding-block: 2rem;
 }
 
+section{
+    margin-block: 6rem;
+}
+
 /* ------------ text ------------- */
 
 h1{
@@ -60,6 +64,8 @@ p, small{
     color: var(--blue);
 }
 
+.italicize{font-style: italic;}
+
 /* ------------ navigation ------------- */
 
 #navigation {
@@ -78,19 +84,69 @@ p, small{
     gap: 2rem;
 }
 
+/* .left-links li a {
+    display: inline;
+    white-space: nowrap;
+}
+
+.left-links li a:hover {
+    color: var(--blue);
+    text-decoration: underline;
+    text-decoration-color: var(--blue);
+    text-decoration-thickness: 0.1rem;
+}
+
+@media (hover: hover) and (pointer: fine) {
+    .has-submenu:hover details[open] .submenu { display: block; }
+    .has-submenu:hover details:not([open]) .submenu { display: block; }
+} */
+
 .nav-title{
     padding-block: 0.25rem;
 }
 
 /* ------------ header ------------- */
 
-header ol:last-child{
+.long-header{
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows: auto auto;
+    grid-template-areas:
+    "one one"
+    "two three";
+}
+
+.subtitle { grid-area: one; }
+.author { grid-area: two; }
+.date { grid-area: three; }
+
+.short-header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
+header ol p{padding-block: 0.2rem;}
+
 header{margin-block-end: 12rem;}
+
+/* ------------ links ------------- */
+
+a{
+    display: inline-block;
+    color: var(--blue);
+    text-decoration: underline;
+    text-decoration-color: var(--blue);
+    text-decoration-thickness: 0.12em;
+    text-underline-offset: 0.15em;
+    transition: color 0.3s ease-in-out;
+}
+
+a:hover{
+    color: green;
+}
+
+blockquote .terms{font-weight:600;}
 
 /* ------------ blockquote ------------- */
 
@@ -101,7 +157,7 @@ blockquote {
     padding-inline-start: 2.5rem;
     color: var(--black);
     z-index: 1;
-    font-family: var(--heading-text);
+    font-family: var(--body-text);
     font-size: 1rem;
 }
 
@@ -118,19 +174,15 @@ blockquote::before {
     content: "“";
     position: absolute;
     left: 0;
-    top: 10%;
+    top: 0%;
     font-family: var(--heading-text);
     font-weight: 800;
-    font-size: 4rem;
+    font-size: 3rem;
     line-height: 1;
     color: var(--blue);
 }
 
-a {color:var(--blue);}
-
-section{
-    margin-block: 6rem;
-}
+/* ------------ section headings ------------- */
 
 .lines {
     padding: var(--spacing);
@@ -159,10 +211,9 @@ section{
     margin-bottom: var(--spacing);
 }
 
-.terms{
-    font-weight: 700;
-    /* display: inline-block; */
-}
+/* ------------ text treatments ------------- */
+
+.terms{font-weight: 700;}
 
 .terms::before{
     content: "{";
@@ -171,3 +222,39 @@ section{
 .terms::after{
     content: "}";
 }
+
+
+/* a {
+    display: inline-block;
+    color: var(--blue);
+    text-decoration: none;
+    background-image: linear-gradient(#c8e695, #c8e695);
+    background-size: 100% 0.5em;
+    background-repeat: no-repeat;
+    background-position: 0 80%;
+}
+
+a:hover {
+    background-image: linear-gradient(90deg,
+        #e8f4c8,
+        #c8e695,
+        #8ac65c,
+        #5aa43a,
+        #8ac65c,
+        #c8e695,
+        #e8f4c8
+    );
+
+    background-size: 300% 0.5em;
+
+    animation: important 4s linear infinite;
+}
+
+@keyframes important {
+    0% {
+        background-position: 0% 80%;
+    }
+    100% {
+        background-position: 100% 80%;
+    }
+} */
