--- a/interaction-of-color/style.css
+++ b/interaction-of-color/style.css
@@ -4,13 +4,7 @@
     justify-content: space-between;
 }
 
-.temperature p{
-    font-weight: 700;
-    font-size: 1.5rem;
-    line-height: 2.4rem;
-    text-align: center;
-}
-
+.multi-temperature p,
 .temperature{
     font-weight: 600;
     font-size: 2rem;
