--- a/common.css
+++ b/common.css
@@ -5,8 +5,12 @@
     --body-text: "Victor Mono", system-ui, sans-serif;
     --spacing: 1rem;
 
-    --blue:#00274E;
-    --background: #F9F4F4;
+    /* --blue:#00274E; */
+    --blue: #FFFFFF;
+    --background: #212121;
+    --red: #FC506E;
+    --orange: #FB8C49;
+    --yellow: #F9C823;
 }
 
 html {scroll-behavior: smooth;}
@@ -41,31 +45,6 @@ header {
     flex-direction: column;
     padding: var(--spacing);
 }
-
-@media (min-width: 750px) {
-    .layout {
-        display: grid;
-        height: 100svh;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows:
-            auto
-            1fr
-            auto;
-        grid-template-areas:
-            "nav nav"
-            "intro content"
-            "footer footer";
-    }
-
-    #nav     { grid-area: nav; }
-    .intro   { grid-area: intro; }
-    .content { 
-        grid-area: content;
-        overflow: auto;
-    }
-    #footer  { grid-area: footer; }
-}
-
 
 /* ------------ text ------------- */
 
@@ -143,7 +122,7 @@ p, small {
     flex-direction: column;
     justify-content: space-between;
     padding-block: var(--spacing);
-    background-color: tomato;
+    /* background-color: #212121; */
     flex: 1 0 auto;
 }
 
@@ -174,6 +153,11 @@ p, small {
 }
 
 .intro ul p {padding-block: 0.2rem;}
+
+#footer {
+    border-top: 1.5px solid var(--blue);
+    padding-block-start: var(--spacing);
+}
 
 /* ------------ links ------------- */
 
@@ -272,6 +256,11 @@ blockquote .lines{
     font-weight:700;
 }
 
+.title-sig {
+    letter-spacing: 0.05em;
+    paint-order: stroke fill;
+    -webkit-text-stroke-width: 0.25rem; 
+}
 
 
 
@@ -309,3 +298,29 @@ a:hover {
         background-position: 100% 80%;
     }
 } */
+
+/* ------------ media queries ------------- */
+
+@media (min-width: 750px) {
+    .layout {
+        display: grid;
+        height: 100svh;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows:
+            auto
+            1fr
+            auto;
+        grid-template-areas:
+            "nav nav"
+            "intro content"
+            "footer footer";
+    }
+
+    #nav     { grid-area: nav; }
+    .intro   { grid-area: intro; }
+    .content { 
+        grid-area: content;
+        overflow: auto;
+    }
+    #footer  {grid-area: footer;}
+}
