--- a/everyday-color-theory/style.css
+++ b/everyday-color-theory/style.css
@@ -1,5 +1,6 @@
 :root {
     --red: #FC506E;
+    --dark-red: #6f303a;
 }
 
 /* ------------ header ------------- */
@@ -14,7 +15,7 @@
     /* gap: 1rem; */
 }
 
-.short-header p{
+.short-header p {
     padding-block: 0.2rem;
 }
 
@@ -24,6 +25,6 @@
 
 
 .title-sig {
-    color: #6f303a;
+    color: var(--dark-red);
     -webkit-text-stroke-color: var(--red);
 }
