actually actually updated color

--- a/gradients/style.css
+++ b/gradients/style.css
@@ -1,6 +1,6 @@
 :root {
     --yellow: #F9C823;
-    --dark-yellow: ##6b5b25;
+    --dark-yellow: #6b5b25;
 }
 
 /* ------------ header ------------- */
