--- a/common.css
+++ b/common.css
@@ -33,8 +33,8 @@ header {
 }
 
 .chapters{
-    padding-block-start: var(--spacing);
-    padding-block-end: 4rem;
+    /* padding-block-start: 2rem; */
+    margin-block-end: 4rem;
 }
 
 .layout {
@@ -42,6 +42,10 @@ header {
     display: flex;
     flex-direction: column;
     padding: var(--spacing);
+}
+
+.chapters {
+    padding-block: 3rem;
 }
 
 /* ------------ text ------------- */
@@ -73,7 +77,8 @@ h3 {
     color: white;
     z-index: 2;
     display: inline-block;
-    background-color: var(--white);
+    border-width: 1.5px;
+    border-color: var(--orange);
 }
 
 p, small {
@@ -105,13 +110,19 @@ p, small {
     gap: 2rem;
 }
 
-.nav-title {
-    padding-block: 0rem;
-    /* font-family: var(--heading-text); */
+#nav-links a{
+    height: 40px; 
+    display: inline-flex;
+    align-items: space-between;
+    justify-content: space-between;
+    cursor: pointer;
+    font-size: 0.75rem;
+    text-decoration: none;
 }
 
-#nav a {text-decoration: none;}
-#nav a:hover {text-decoration: underline;}
+.nav-title {
+    padding-block: 0rem;
+}
 
 /* ------------ intro ------------- */
 
@@ -166,6 +177,7 @@ p, small {
 #footer {
     border-top: 1.5px solid var(--white);
     padding-block-start: var(--spacing);
+    background-color: var(--background);
 }
 
 /* ------------ links ------------- */
@@ -186,7 +198,7 @@ blockquote {
     position: relative;
     margin-inline-start: 3rem;
     margin-block: 4rem;
-    padding-inline-start: 2.5rem;
+    padding-inline-start: 2rem;
     color: var(--white);
     z-index: 1;
     font-family: var(--body-text);
@@ -211,7 +223,6 @@ blockquote::before {
     font-weight: 800;
     font-size: 3rem;
     line-height: 1;
-    color: var(--white);
 }
 
 /* ------------ section headings ------------- */
@@ -226,7 +237,7 @@ blockquote::before {
     font-weight: 600;
     font-size: 2rem;
     display: inline-block;
-    margin-bottom: var(--spacing);
+    margin-bottom: 2rem;
 }
 
 .lines {
@@ -267,6 +278,9 @@ blockquote .lines{
     -webkit-text-stroke-width: 0.25rem; 
 }
 
+.bold {
+    font-weight: 700;
+}
 
 
 /* a {
@@ -331,6 +345,7 @@ a:hover {
 
     .intro {
         position: relative;
+        padding-inline-end: var(--spacing);
     }
 
     .intro::after {
@@ -341,6 +356,12 @@ a:hover {
         right: 0;
         width: 1.5px; 
         background-color: var(--white);
+    }
+
+    .content {
+        padding-inline-start: 2rem;
+        padding-inline-end: var(--spacing);
+        padding-block: var(--spacing);
     }
 }
 
