--- a/interaction-of-color/style.css
+++ b/interaction-of-color/style.css
@@ -37,7 +37,7 @@
 .diamond.big {
     border-width: 1.5px;
     border-style: solid;
-    border-color: var(--blue);
+    border-color: var(--orange);
 }
 
 .tilted-grid,
@@ -75,7 +75,7 @@
     left: -9%;
     width: 125%;
     height: 2px;
-    background: var(--blue);
+    background: var(--orange);
     transform: rotate(-20deg);
     transform-origin: left center;
 }
@@ -146,12 +146,12 @@
 }
 
 .arrow {
-    position: absolute;
+    position: relative;
     top: 49%;
     left: 200px;
     width: 115px;
     height: 1.5px;
-    background: var(--blue);
+    background: var(--orange);
 }
 
 .arrow::after {
@@ -161,8 +161,8 @@
     top: 70%;
     width: 8px;
     height: 8px;
-    border-top: 1.5px solid var(--blue);
-    border-right: 1.5px solid var(--blue);
+    border-top: 1.5px solid var(--orange);
+    border-right: 1.5px solid var(--orange);
     transform: translateY(-50%) rotate(45deg);
 }
 
@@ -182,8 +182,8 @@
     position: absolute;
     width: 55%;
     aspect-ratio: 1 / 1;
-    border-inline-start: 1px dashed var(--blue);
-    border-block-end: 1px dashed var(--blue);
+    border-inline-start: 1px dashed var(--orange);
+    border-block-end: 1px dashed var(--orange);
     right: 0%;
     top: 0%;
 }
@@ -193,6 +193,7 @@
     font-family: var(--body-text);
     font-size: 0.8rem;
     transform: rotate(-45deg);
+    color: var(--orange);
 }
 
 
@@ -202,5 +203,21 @@
 }
 
 a:hover {
+    color: var(--orange);
+}
+
+#nav-links a .interaction{
+    background-color: #7d4b2c;
+    border-color: #FB8C49;
+    color: #FB8C49;
+    justify-content: center;
+    align-items: center;
+    transition: color 0.3s ease-in-out;
+    border-radius: 20px;
+    border-style: solid;
+    border-width: 1.5px;
+}
+
+blockquote::before {
     color: var(--orange);
 }
