--- a/common.css
+++ b/common.css
@@ -325,7 +325,7 @@ a:hover {
   background: transparent;
 
   margin-inline: auto;
-  margin-block: auto;
+  margin-block: 3rem;
   align-self: center;
 }
 
