--- a/common.css
+++ b/common.css
@@ -183,10 +183,8 @@ a {
     display: inline-block;
     color: var(--white);
     text-decoration: underline;
-    text-decoration-color: var(--white);
-    text-decoration-thickness: 0.12em;
-    text-underline-offset: 0.15em;
-    transition: color 0.3s ease-in-out;
+    text-decoration-thickness: 0.1em;
+    text-underline-offset: 0.2em;
 }
 
 /* ------------ blockquote ------------- */
@@ -280,45 +278,9 @@ blockquote .lines{
     font-weight: 700;
 }
 
+/* ------------ interaction ------------- */
 
-/* a {
-    display: inline-block;
-    color: var(--white);
-    text-decoration: none;
-    background-image: linear-gradient(#c8e695, #c8e695);
-    background-size: 100% 0.5em;
-    background-repeat: no-repeat;
-    background-position: 0 80%;
-}
-
-a:hover {
-    background-image: linear-gradient(90deg,
-        #e8f4c8,
-        #c8e695,
-        #8ac65c,
-        #5aa43a,
-        #8ac65c,
-        #c8e695,
-        #e8f4c8
-    );
-
-    background-size: 300% 0.5em;
-
-    animation: important 4s linear infinite;
-}
-
-@keyframes important {
-    0% {
-        background-position: 0% 80%;
-    }
-    100% {
-        background-position: 100% 80%;
-    }
-} */
-
-/* ------------ interaction demo ------------- */
-
-.interaction-demo {
+.interaction {
   position: relative;
   width: 200px;
   height: 200px;
@@ -366,6 +328,13 @@ a:hover {
   }
 }
 
+/* ------------ perception ------------- */
+
+.penrose-triangle {
+  max-width: 100%;
+  height: auto;
+  float: center;
+}
 
 /* ------------ media queries ------------- */
 
