--- a/everyday-color-theory/style.css
+++ b/everyday-color-theory/style.css
@@ -4,6 +4,13 @@
    --color: #c5465b;
 }
 
+/* ------------ color changes ------------- */
+
+a,
+a:hover {
+    text-decoration-color: var(--red);
+}
+
 .terms,
 .ch-no,
 a:hover,
@@ -11,15 +18,36 @@ blockquote::before {
     color: var(--red);
 }
 
-a,
-a:hover {
-    text-decoration-color: var(--red);
-}
-
 .ch-no {
     border-color: var(--red);
     background-color: var(--dark-red);
 }
+
+.title-sig {
+    color: var(--dark-red);
+    -webkit-text-stroke-color: var(--red);
+}
+
+.highlight { background-color: var(--dark-red); }
+
+/* ------------ nav links ------------- */
+
+a.nav-link-home,
+a.nav-link-interaction,
+a.nav-link-transition {
+    color: var(--white);
+    text-decoration: none;
+}
+
+a.nav-link-perception {
+    color: var(--red);
+}
+
+.nav-link-home:hover { color: var(--green); }
+.nav-link-perception:hover { color: var(--red); }
+.nav-link-interaction:hover { color: var(--orange); }
+.nav-link-transition:hover { color: var(--yellow); }
+
 
 /* ------------ header ------------- */
 
@@ -41,8 +69,4 @@ a:hover {
 .author { grid-area: two; }
 .date { grid-area: three; }
 
-
-.title-sig {
-    color: var(--dark-red);
-    -webkit-text-stroke-color: var(--red);
-}
+#invisible { color: #7c7c7c; }
