--- a/gradients/style.css
+++ b/gradients/style.css
@@ -3,6 +3,13 @@
     --dark-yellow: #6b5b25;
 }
 
+/* ------------ color changes ------------- */
+
+a,
+a:hover {
+    text-decoration-color: var(--yellow);
+}
+
 .terms,
 .ch-no,
 a:hover,
@@ -10,38 +17,32 @@ blockquote::before {
     color: var(--yellow);
 }
 
-a,
-a:hover {
-    text-decoration-color: var(--yellow);
-}
-
 .ch-no {
     border-color: var(--yellow);
     background-color: var(--dark-yellow);
 }
 
-/* ------------ header ------------- */
-
-.short-header{
-    display: grid;
-    grid-template-columns: 2fr 2fr;
-    grid-template-rows: auto auto;
-    grid-template-areas:
-    "one one"
-    "two three";
-    /* gap: 1rem; */
-}
-
-.short-header p {
-    padding-block: 0.2rem;
-}
-
-.subtitle { grid-area: one; }
-.author { grid-area: two; }
-.date { grid-area: three; }
-
-
 .title-sig {
     color: var(--dark-yellow);
     -webkit-text-stroke-color: var(--yellow);
 }
+
+.highlight { background-color: var(--dark-yellow); }
+
+/* ------------ nav links ------------- */
+
+a.nav-link-home,
+a.nav-link-perception,
+a.nav-link-interaction {
+    color: var(--white);
+    text-decoration: none;
+}
+
+a.nav-link-transition {
+    color: var(--yellow);
+}
+
+.nav-link-home:hover { color: var(--green); }
+.nav-link-perception:hover { color: var(--red); }
+.nav-link-interaction:hover { color: var(--orange); }
+.nav-link-transition:hover { color: var(--yellow); }
