--- a/common.css
+++ b/common.css
@@ -114,24 +114,27 @@ p, small {
     padding-bottom: var(--spacing);
     font-family: var(--body-text);
     color: var(--white);
-    
 }
 
 #nav-links {
     display: flex;
+    flex-direction: row;
+    list-style: none;
     gap: 2rem;
+    padding: 0;
+    margin: 0;
 }
 
-
-/* #nav-links a {
+#nav-links a {
     height: 40px; 
-    display: inline-flex;
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
     font-size: 0.75rem;
     text-decoration: none;
-} */
+}
 
 .nav-title {
     font-size: 1.4rem;
@@ -142,18 +145,6 @@ p.nav-title {
     padding-block-start: var(--spacing);
     padding-block-end: 0.2rem;
 }
-
-/* #nav-links-home li a {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    padding-inline: 1.5rem;
-    padding-block: 3rem;
-    border: 1.5px solid var(--white);
-    text-decoration: none;
-    color: var(--white);
-    box-sizing: border-box;
-} */
 
 /* ------------ intro ------------- */
 
