--- a/common.css
+++ b/common.css
@@ -85,10 +85,11 @@ h3 {
     line-height: 2rem;
     padding: 1rem;
     margin-block: 2rem;
-    color: white;
+    color: var(--white);
     z-index: 2;
     display: inline-block;
     border-width: 1.5px;
+    border-style: solid;
     border-color: var(--orange);
 }
 
@@ -204,7 +205,7 @@ p.nav-title {
 /* ------------ links ------------- */
 
 a {
-    display: inline-block;
+    display: inline;
     color: var(--white);
     text-decoration: underline;
     text-decoration-thickness: 0.1em;
