--- a/common.css
+++ b/common.css
@@ -5,7 +5,7 @@
     --body-text: "Victor Mono", system-ui, sans-serif;
     --spacing: 1rem;
 
-    --white: #FFFFFF;
+    --white: #e9e9e9;
     --background: #212121;
     /* --red: #FC506E;
     --orange: #FB8C49;
